--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.35.3",
-    "lucide-react": "^0.453.0",
-    "next": "15.0.1",
+    "drizzle-orm": "^0.36.0",
+    "lucide-react": "^0.454.0",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-69d4b800-20241021",
@@ -33,12 +33,12 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20",
+    "@types/node": "^22.8.6",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "drizzle-kit": "^0.26.2",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1",
+    "drizzle-kit": "^0.27.1",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-check-file": "^2.8.0",
     "postcss": "^8",
