--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -38,11 +38,11 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.460.0",
-    "next": "^15.0.2",
+    "next": "15.0.4",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.1",
     "resend": "^4.0.0",
@@ -57,11 +57,11 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.8.6",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "drizzle-kit": "^0.27.1",
     "eslint": "^9.14.0",
-    "eslint-config-next": "^15.0.2",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-check-file": "^2.8.0",
     "postcss": "^8",
@@ -72,7 +72,7 @@
     "typescript": "^5"
   },
   "resolutions": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1"
   }
 }
