--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -27,7 +27,8 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/ssr": "^0.5.1",
@@ -40,10 +41,12 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.460.0",
+    "nanoid": "^5.0.9",
     "next": "15.0.4",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
     "react": "19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.1",
