--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -42,7 +42,7 @@
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.9",
-    "next": "15.0.4",
+    "next": "^15.1.0",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
     "react": "19.0.0",
@@ -54,6 +54,7 @@
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "turbo": "^2.3.0",
     "uuid": "^10.0.0",
     "vaul": "^1.1.1",
     "zod": "^3.23.8",
