--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -42,12 +42,12 @@
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.9",
-    "next": "^15.1.1",
+    "next": "14.2.1",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
-    "react": "19.0.0",
+    "react": "18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0",
+    "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.1",
     "resend": "^4.0.0",
@@ -63,8 +63,8 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.8.6",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.27.1",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.4",
@@ -78,7 +78,7 @@
     "typescript": "^5"
   },
   "resolutions": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1"
+    "@types/react": "18.3.18",
+    "@types/react-dom": "18.3.5"
   }
 }
